batch-orchestrator/main/batch-job-management/objects/Batch_Apex_Job__c/Batch_Apex_Job__c.object-meta.xml
<CustomObject>
    <description>Batch Apex jobs managed by Batch Job Scheduler</description>
    <label>Batch Apex Job</label>
    <nameField>
        <displayFormat>JOB-{000000}</displayFormat>
        <label>Batch Apex Job No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Apex Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>