batch-orchestrator/main/batch-job-management/objects/Batch_Apex_Job__c/fields/Batch_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Class_Name__c</fullName>
    <description>Apex batch class name</description>
    <inlineHelpText>Batch Apex class name</inlineHelpText>
    <label>Batch Class Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>