batch-orchestrator/main/batch-job-management/objects/Batch_Apex_Job__c/fields/Batch_Job_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Schedule__c</fullName>
    <description>Parent Batch Job Schedule</description>
    <label>Batch Job Schedule</label>
    <referenceTo>Batch_Job_Schedule__c</referenceTo>
    <relationshipLabel>Batch Apex Jobs</relationshipLabel>
    <relationshipName>Batch_Apex_Jobs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>