batch-orchestrator/main/batch-job-management/objects/Batch_Apex_Job__c/fields/EnhancedLogging__c.field-meta.xml
<CustomField>
    <fullName>EnhancedLogging__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
    >Enhanced Logging requires additional methods to be used and is recommended to be done with all Jobs of one schedule. Please refer to the README for more information.</inlineHelpText>
    <label>Enhanced Logging</label>
    <type>Checkbox</type>
</CustomField>