batch-orchestrator/main/batch-job-management/objects/Batch_Apex_Job__c/fields/Run_Now__c.field-meta.xml
<CustomField>
    <fullName>Run_Now__c</fullName>
    <formula>HYPERLINK('/apex/RunBatchApexJob?id='+Id,'Run Now','_self')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Run Now</label>
    <type>Text</type>
</CustomField>